--- a/.github/workflows/trigger-schedule.yml
+++ b/.github/workflows/trigger-schedule.yml
@@ -7,5 +7,5 @@ jobs:
   do-alert:
     runs-on: ubuntu-latest
     steps:
-      - name: Create Alert
-        run: echo "Esta es la alerta creada para identificar el scheduler"
+      - name: Create Alert - Schedule
+        run: echo "Esta es la alerta creada para identificar el SCHEDULE"
