--- a/.github/workflows/trigger-schedule.yml
+++ b/.github/workflows/trigger-schedule.yml
@@ -2,7 +2,7 @@ name: Trigger-Schedule Test
 run-name: Trigger-Schedule Test
 on:
   schedule:
-    - cron: '5 * 22 11 *'
+    - cron: '5 * * * WED'
 jobs:
   do-alert:
     runs-on: ubuntu-latest
