--- a/.github/workflows/trigger-schedule.yml
+++ b/.github/workflows/trigger-schedule.yml
@@ -2,7 +2,7 @@ name: Trigger-Schedule Test
 run-name: Trigger-Schedule Test
 on:
   schedule:
-    - cron: '5 * * * WED'
+    - cron: '0/2 * * * *'
 jobs:
   do-alert:
     runs-on: ubuntu-latest
