--- a/.github/workflows/trigger-workflow-dispatch.yml
+++ b/.github/workflows/trigger-workflow-dispatch.yml
@@ -6,7 +6,7 @@ on:
       alerta:
         description: 'nivel'
         required: true
-        default: 'medio'
+        default: medio
         type: choice
         options:
         - bajo
