--- a/.github/workflows/trigger-pull-request.yml
+++ b/.github/workflows/trigger-pull-request.yml
@@ -6,8 +6,24 @@ on:
       - opened
       - labeled
       - synchronize
+  workflow_dispatch:
+    inputs:
+      alerta:
+        description: 'nivel'
+        required: true
+        default: medio
+        type: choice
+        options:
+          - bajo
+          - medio
 jobs:
-  do-alert:
+  do-alert-dispatch:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Create Alert - DISPATCH
+        run: echo "Esta es la alerta creada para identificar el DISPATCH"
+  do-alert-pr:
+    if: ${{ github.event_name != 'workflow_dispatch' }}
     runs-on: ubuntu-latest
     steps:
       - name: Create Alert - PR
