--- a/.github/workflows/trigger-pull-request.yml
+++ b/.github/workflows/trigger-pull-request.yml
@@ -6,36 +6,8 @@ on:
       - opened
       - labeled
       - synchronize
-  workflow_dispatch:
-    inputs:
-      lenguaje_favorito:
-        description: 'Lenguaje favorito'
-        default: Python
-        required: true
-        type: choice
-        options:
-          - Python
-          - JavaScript
-          - Go
-      nombre:
-        description: 'Tu nombre'
-        required: true
-        default: Juan
-        type: string
-#  schedule:
-#    - cron:  '15 22 * * *'
 jobs:
-  hola-mundo-manual:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-      - name: Definir nombre
-        run: echo "USERNAME=${{ inputs.nombre }}" >> $GITHUB_ENV
-      - name: Definir lenguaje
-        run: echo "LANGUAGE=${{ inputs.lenguaje_favorito }}" >> $GITHUB_ENV
-  do-alert-pr:
-    if: ${{ github.event_name != 'workflow_dispatch' }}
+  do-alert:
     runs-on: ubuntu-latest
     steps:
       - name: Create Alert - PR
