--- a/.github/workflows/expresiones.yml
+++ b/.github/workflows/expresiones.yml
@@ -29,7 +29,7 @@ jobs:
         run: echo "Lo sentimos ${{inputs.nombre}}, no tienes función definida"
 
   do-admin-function:
-    if: ${{ inputs.nombre == 'Admin' && input.pass-code == '123' }}
+    if: ${{ inputs.nombre == 'Admin' && inputs.pass-code == '123' }}
     runs-on: ubuntu-latest
     steps:
       - name: Función para Admins
