se agrega job para debuggear inputs

--- a/.github/workflows/expresiones.yml
+++ b/.github/workflows/expresiones.yml
@@ -1,4 +1,4 @@
-name: expresiones
+name: Expresiones
 run-name: Ejemplo de EXPRESIONES
 on:
   workflow_dispatch:
@@ -21,14 +21,24 @@ on:
         required: true
         type: string
 jobs:
+  get-inputs:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Definir nombre
+        run: echo "NAME = ${{ inputs.nombre }}"
+      - name: Definir rol
+        run: echo "ROLL = ${{ inputs.rol }}"
+      - name: Definir Pass-code
+        run: echo "PASS = ${{ inputs.pass-code }}"
   do-user-client-function:
+    needs: get-inputs
     if: ${{ inputs.nombre == 'User' || inputs.nombre == 'Client' }}
     runs-on: ubuntu-latest
     steps:
       - name: Función para Users y Clients
         run: echo "Lo sentimos ${{inputs.nombre}}, no tienes función definida"
-
   do-admin-function:
+    needs: get-inputs
     if: ${{ inputs.nombre == 'Admin' && inputs.pass-code == '123' }}
     runs-on: ubuntu-latest
     steps:
